<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_plus"
        android:title="Subir" />


    <item
        android:id="@+id/navigation_style"
        android:icon="@drawable/ic_style"
        android:title="@string/title_style"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile"/>

</menu>