<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.armariovirtual.views.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.armariovirtual.views.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />


    <fragment
        android:id="@+id/navigation_style"
        android:name="com.example.armariovirtual.views.fragments.ReelFragment"
        android:label="@string/title_style"
        tools:layout="@layout/reels_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.armariovirtual.views.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment"/>


</navigation>