<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_option"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="8dp"/>

    <Button
        android:id="@+id/btn_subir_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/upload_publication" />

    <Button
        android:id="@+id/btn_subir_prenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/upload_clothes" />

    <Button
        android:id="@+id/btn_crear_outfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/create_outfit" />

   <!-- <Button
        android:id="@+id/btn_subir_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnBackground"
        android:text="Subir vídeo" />-->


</LinearLayout>
